crates/cli/tests/snapshots/cli_output__unknown_root_argument_prints_localized_error_once.snap
---
source: crates/cli/tests/cli_output.rs
description: AUTOLANG_LOCALE=zh-Hans autolang --bad
---
$ AUTOLANG_LOCALE=zh-Hans autolang --bad

status: 2

stdout:

stderr:
错误: 发现意外参数 '--bad'

用法： autolang [命令]

更多信息请尝试 '--help'。
