crates/cli/tests/snapshots/cli_output__version_prints_package_version.snap
---
source: crates/cli/tests/cli_output.rs
description: AUTOLANG_LOCALE=zh-Hans autolang -V
---
$ AUTOLANG_LOCALE=zh-Hans autolang -V

status: 0

stdout:
autolang 0.0.1

stderr:
